--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,10 @@
     <script src="thirdParty/jquery-3.1.1.min.js"></script>
     <!-- // <script src = "https://code.jquery.com/jquery-1.10.2.js"></script> -->
     <script src = "thirdParty/jquery-ui.js"></script>
+    <script src="thirdParty/webgazer.js" type="text/javascript" ></script>
+
     <script src="popup.js"></script>
+
 
   </head>
   <body>
@@ -24,7 +27,7 @@
   <div id="main">
     <div id="inner-div">
       <img src="icon.png" alt="eyeGalaw-icon" id="eyeGalaw-icon">
-      <a class="ghost-button" href="#">START</a>
+      <a class="ghost-button" id="clickme" href="#">START</a>
       <a class="ghost-button" href="#">Options</a>
       <div class="dropdown">
       <h5> scrolling speed </h5> 
