--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Getting Started Extension's Popup</title>
       <link rel="stylesheet" href="popup.css">
-      <link href = "thirdParty/jquery-ui.css"   rel = "stylesheet">
+      <link href = "src/thirdParty/jquery-ui.css"   rel = "stylesheet">
       
    
 
@@ -13,10 +13,10 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="thirdParty/jquery-3.1.1.min.js"></script>
+    <script src="src/thirdParty/jquery-3.1.1.min.js"></script>
     <!-- // <script src = "https://code.jquery.com/jquery-1.10.2.js"></script> -->
-    <script src = "thirdParty/jquery-ui.js"></script>
-    <script src="thirdParty/webgazer.js" type="text/javascript" ></script>
+    <script src = "src/thirdParty/jquery-ui.js"></script>
+    <script src="src/thirdParty/webgazer.js" type="text/javascript" ></script>
 
     <script src="popup.js"></script>
 
