--- a/popup.html
+++ b/popup.html
@@ -31,9 +31,12 @@
       <a class="ghost-button" href="#">Options</a>
       <div class="dropdown">
       <h5> scrolling speed </h5> 
-      <div class="flat-slider" id="flat-slider"></div>
+      <div class="flat-slider" id="flat-slider2"></div>
+      <p> <span id="slider-value-scroll" class="slider-value"></span></p>
+
       <h5> opacity </h5>
-      <div class="flat-slider" id="flat-slider"></div>
+      <div class="flat-slider" id="flat-slider1"></div>      
+      <p> <span id="slider-value-opacity" class="slider-value"></span></p>
       <h5> enable eye pointer </h5>
       <div class="flat-slider" id="flat-slider"></div>
 
