[eyeGalaw | webgazer] pop-up.js removed uncessary code, added comments

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
   <div id="main">
     <div id="inner-div">
       <img src="icon.png" alt="eyeGalaw-icon" id="eyeGalaw-icon">
-      <a class="ghost-button" id="clickme" href="#" ></a>
+      <a class="ghost-button" id="start_button" href="#" ></a>
       <a class="ghost-button" href="#">Options</a>
       <div class="dropdown">
       <h5> scrolling speed </h5> 
