--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
     <script src="src/thirdParty/jquery-3.1.1.min.js"></script>
     <!-- // <script src = "https://code.jquery.com/jquery-1.10.2.js"></script> -->
     <script src = "src/thirdParty/jquery-ui.js"></script>
-    <script src="src/thirdParty/webgazer.js" type="text/javascript" ></script>
+    <!-- // <script src="src/thirdParty/webgazer.js" type="text/javascript" ></script> -->
 
     <script src="popup.js"></script>
 
