[eyeGalaw] Edited controls css

--- a/popup.html
+++ b/popup.html
@@ -28,17 +28,17 @@
     <div id="inner-div">
       <img src="icon.png" alt="eyeGalaw-icon" id="eyeGalaw-icon">
       <a class="ghost-button" id="start_button" href="#" ></a>
-      <a class="ghost-button" href="#">Options</a>
-      <div class="dropdown">
-      <h5> scrolling speed </h5> 
-      <div class="flat-slider" id="flat-slider2"></div>
-      <p> <span id="slider-value-scroll" class="slider-value"></span></p>
+      <a class="ghost-button options" href="#" id="options">Options</a>
+      <div class="dropdown" >
+        <h5> scrolling speed </h5> 
+        <div class="flat-slider" id="flat-slider2"></div>
+        <p> <span id="slider-value-scroll" class="slider-value"></span></p>
 
-      <h5> opacity </h5>
-      <div class="flat-slider" id="flat-slider1"></div>      
-      <p> <span id="slider-value-opacity" class="slider-value"></span></p>
-      <h5> enable eye pointer </h5>
-      <div class="flat-slider" id="flat-slider"></div>
+        <h5> opacity </h5>
+        <div class="flat-slider" id="flat-slider1"></div>      
+        <p> <span id="slider-value-opacity" class="slider-value"></span></p>
+        <h5> enable eye pointer </h5>
+        <div class="flat-slider" id="flat-slider"></div>
 
       </div>
     </div>
