--- a/popup.html
+++ b/popup.html
@@ -37,8 +37,8 @@
         <h5> opacity </h5>
         <div class="flat-slider" id="flat-slider1"></div>      
         <p> <span id="slider-value-opacity" class="slider-value"></span></p>
-        <h5> enable eye pointer </h5>
-        <div class="flat-slider" id="flat-slider"></div>
+        <!-- <h5> enable eye pointer </h5>
+        <div class="flat-slider" id="flat-slider"></div> -->
 
       </div>
     </div>
