[eyeGalaw] Problem: does not start wehn newly isntalled. but the rest is working great

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0080)https://developer.chrome.com/extensions/examples/tutorials/getstarted/popup.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Getting Started Extension's Popup</title>
+    <title>eyeGalaw</title>
       <link rel="stylesheet" href="popup.css">
       <link href = "src/thirdParty/jquery-ui.css"   rel = "stylesheet">
       <link href = "src/thirdParty/jquery.switchButton.css"   rel = "stylesheet">
@@ -54,21 +54,6 @@
 
     
   </div>
-
-
-
-    <!-- <div id="status">
-    <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Options</button>
-      <div id="myDropdown" class="dropdown-content">
-      <div class="flat-slider" id="flat-slider"></div>
-
-        <a href="#">Scrolling speed 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-      </div>
-    </div> -->
-
 
     </div>
   
