--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
       <a class="ghost-button options center" href="#" id="options">Options</a>
-      <div class="dropdown center" id="effect" >
+      <div class="dropdown center low-opacity" id="effect" >
         <h5> scrolling speed </h5> 
         <div class="flat-slider" id="flat-slider2"></div>
         <p> <span id="slider-value-scroll" class="slider-value"></span></p>
