[eyeGalaw] UI curve-div padding bottom added

--- a/popup.html
+++ b/popup.html
@@ -30,12 +30,12 @@
 
   <div id="main">
     <div id="inner-div">
-      <div id="curve-div">
+      <div class="padding" id="curve-div">
         <img src="icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
       <a class="ghost-button options center" href="#" id="options">Options</a>
-      <div class="dropdown center low-opacity" id="effect" >
+      <div class="dropdown center low-opacity effect" id="effect" >
         <h5> scrolling speed </h5> 
         <div class="flat-slider" id="flat-slider2"></div>
         <p> <span id="slider-value-scroll" class="slider-value"></span></p>
