--- a/popup.html
+++ b/popup.html
@@ -30,20 +30,22 @@
 
   <div id="main">
     <div id="inner-div">
-      <div class="padding" id="curve-div">
+      <div class="" id="curve-div">
         <img src="icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
       <a class="ghost-button options center" href="#" id="options">Options</a>
-      <div class="dropdown center low-opacity effect" id="effect" >
-        <h5> scrolling speed </h5> 
-        <div class="flat-slider" id="flat-slider2"></div>
-        <p> <span id="slider-value-scroll" class="slider-value"></span></p>
+      <div class="dropdown center low-opacity" id="effect" >
+        <span class="label"> Scrolling speed </span> 
+        <div class="flat-slider" id="flat-slider2"></div><span id="slider-value-scroll" class="slider-value">-</span>
+        <!-- <p> </p> -->
 
-        <h5> opacity </h5>
+        <span class="label"> Opacity </span>  
         <div class="flat-slider" id="flat-slider1"></div>      
-        <p> <span id="slider-value-opacity" class="slider-value"></span></p>
-        <h5> eye video </h5>
+        <span id="slider-value-opacity" class="slider-value"></span>
+
+
+        <span class="label"> Eye video feed <span class="label">
         <div class="onoffswitch ">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
             <label class="onoffswitch-label" for="myonoffswitch">
