[eyeGalaw] Fixed scrolling speed accuracy proportion to window height

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
       <link href = "src/thirdParty/jquery.switchButton.css"   rel = "stylesheet">
       <link rel="stylesheet" href="flat-slider.css">
       <link rel="stylesheet" href="popup.css">
+      <!-- <link rel="stylesheet" href="eyes.css"> -->
 
 
       
@@ -31,6 +32,34 @@
   <div id="main">
     <div id="inner-div">
       <div class="" id="curve-div">
+      <!--  -->
+      <div id="surface">
+  <div id="hover_one"></div>
+  <div id="hover_two"></div>
+  <div id="hover_three"></div>
+  <div id="hover_four"></div>
+  <div id="hover_five"></div>
+  <div id="hover_six"></div>
+  <div id="hover_seven"></div>
+  <div id="hover_eight"></div>
+  <div id="hover_nine"></div>
+  <div id="hover_ten"></div>
+  <div id="hover_eleven"></div>
+  <div id="hover_twelve"></div>
+  <div id="hover_thirteen"></div>
+  <div id="hover_fourteen"></div>
+  <div id="hover_fifteen"></div>
+  <div id="hover_sixteen"></div>
+  
+    <div id="eye">
+      <div id="eyewhite">
+        <div id="iris">
+          <div id="shine"></div>
+        </div>
+      </div>
+    </div>
+</div>
+      <!--  -->
         <img src="icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
