--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,9 @@
     <title>eyeGalaw</title>
       <link href = "src/thirdParty/jquery-ui.css"   rel = "stylesheet">
       <link href = "src/thirdParty/jquery.switchButton.css"   rel = "stylesheet">
-      <link rel="stylesheet" href="flat-slider.css">
-      <link rel="stylesheet" href="popup.css">
-      <!-- <link rel="stylesheet" href="eyes.css"> -->
+      <link rel="stylesheet" href="src/css/flat-slider.css">
+      <link rel="stylesheet" href="src/css/popup.css">
+      <!-- <link rel="stylesheet" href="src/css/eyes.css"> -->
 
 
       
@@ -23,7 +23,7 @@
     <script src = "src/thirdParty/jquery-ui.js"></script>
     <!-- // <script src="src/thirdParty/webgazer.js" type="text/javascript" ></script> -->
 
-    <script src="popup.js"></script>
+    <script src="src/js/popup.js"></script>
 
 
   </head>
@@ -60,7 +60,7 @@
     </div>
 </div>
       <!--  -->
-        <img src="icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
+        <img src="src/img/icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
       <a class="ghost-button options center" href="#" id="options">Options</a>
