--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
       <link href = "src/thirdParty/jquery-ui.css"   rel = "stylesheet">
       <link href = "src/thirdParty/jquery.switchButton.css"   rel = "stylesheet">
       <link rel="stylesheet" href="src/css/flat-slider.css">
+      <link rel="stylesheet" href="src/thirdParty/toastr.min.css">
       <link rel="stylesheet" href="src/css/popup.css">
       <!-- <link rel="stylesheet" href="src/css/eyes.css"> -->
 
@@ -21,6 +22,7 @@
     <script src="src/thirdParty/jquery-3.1.1.min.js"></script>
     <!-- // <script src = "https://code.jquery.com/jquery-1.10.2.js"></script> -->
     <script src = "src/thirdParty/jquery-ui.js"></script>
+    <script src = "src/thirdParty/toastr.min.js"></script>
     <!-- // <script src="src/thirdParty/webgazer.js" type="text/javascript" ></script> -->
 
     <script src="src/js/popup.js"></script>
