[eyeGalaw] Modified starting screen- added video demo

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0080)https://developer.chrome.com/extensions/examples/tutorials/getstarted/popup.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <title>eyeGalaw</title>
       <link href = "src/thirdParty/jquery-ui.css"   rel = "stylesheet">
       <link href = "src/thirdParty/jquery.switchButton.css"   rel = "stylesheet">
@@ -65,7 +66,7 @@
         <img src="src/img/icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
-      <a class="ghost-button options center" href="#" id="options">Options</a>
+      <a class="ghost-button options center" href="#" id="options">Options▲</a>
       <div class="dropdown center low-opacity" id="effect" >
         <span class="label"> Scrolling speed </span> 
         <div class="flat-slider" id="flat-slider2"></div><span id="slider-value-scroll" class="slider-value">-</span>
