[eyeGalaw] Edited drop down eye pic and help buttons not yet done

--- a/popup.html
+++ b/popup.html
@@ -25,46 +25,21 @@
     <div id="inner-div">
       <div class="" id="curve-div">
       <!--  -->
-      <div id="surface">
-  <div id="hover_one"></div>
-  <div id="hover_two"></div>
-  <div id="hover_three"></div>
-  <div id="hover_four"></div>
-  <div id="hover_five"></div>
-  <div id="hover_six"></div>
-  <div id="hover_seven"></div>
-  <div id="hover_eight"></div>
-  <div id="hover_nine"></div>
-  <div id="hover_ten"></div>
-  <div id="hover_eleven"></div>
-  <div id="hover_twelve"></div>
-  <div id="hover_thirteen"></div>
-  <div id="hover_fourteen"></div>
-  <div id="hover_fifteen"></div>
-  <div id="hover_sixteen"></div>
-  
-    <div id="eye">
-      <div id="eyewhite">
-        <div id="iris">
-          <div id="shine"></div>
-        </div>
-      </div>
-    </div>
-</div>
+     
       <!--  -->
-        <img src="src/img/icon.png" class="center" alt="eyeGalaw-icon" id="eyeGalaw-icon">
+        <img src="src/img/icon2.png" data-alt-src="src/img/icond.png"  class="center" id="eyeGalaw-icon">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
       <a class="ghost-button options center" href="#" id="options">Options▲</a>
       <div class="dropdown center low-opacity" id="effect" >
-        <span class="label"> Scrolling speed </span> 
-        <div class="flat-slider" id="flat-slider2"></div><span id="slider-value-scroll" class="slider-value">-</span>
-        <span class="label"> Opacity </span>  
+        <span class="label"> Scrolling speed </span> <a id="help" href="#">?</a>
+        <div class="flat-slider" id="flat-slider2"></div><span id="slider-value-scroll" class="slider-value"></span>
+
+        <span class="label"> Opacity </span>  <a id="help" href="#">?</a>
         <div class="flat-slider" id="flat-slider1"></div>      
         <span id="slider-value-opacity" class="slider-value"></span>
 
-
-        <span class="label"> Eye video feed <span class="label">
+        <span class="label"> Eye video feed <span class="label"><a id="help" href="#">?</a>
         <div class="onoffswitch ">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
             <label class="onoffswitch-label" for="myonoffswitch">
