[eyeGalaw] Edited drop down eye pic and help buttons not yet done

--- a/popup.html
+++ b/popup.html
@@ -32,14 +32,14 @@
       </div>
       <a class="ghost-button options center" href="#" id="options">Options▲</a>
       <div class="dropdown center low-opacity" id="effect" >
-        <span class="label"> Scrolling speed </span> <a id="help" href="#">?</a>
+        <span class="label"> Scrolling speed </span> <a id="speedhelp"class="help" href="#" title="Click to view" class="masterTooltip">?</a>
         <div class="flat-slider" id="flat-slider2"></div><span id="slider-value-scroll" class="slider-value"></span>
 
-        <span class="label"> Opacity </span>  <a id="help" href="#">?</a>
+        <span class="label"> Opacity </span>  <a class="help" href="#">?</a>
         <div class="flat-slider" id="flat-slider1"></div>      
         <span id="slider-value-opacity" class="slider-value"></span>
 
-        <span class="label"> Eye video feed <span class="label"><a id="help" href="#">?</a>
+        <span class="label"> Eye video feed <span class="label"><a class="help" href="#">?</a>
         <div class="onoffswitch ">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
             <label class="onoffswitch-label" for="myonoffswitch">
