--- a/popup.html
+++ b/popup.html
@@ -27,19 +27,19 @@
       <!--  -->
      
       <!--  -->
-        <img src="src/img/icon2.png" data-alt-src="src/img/icond.png"  class="center" id="eyeGalaw-icon">
+        <img src="src/img/icon2.png" data-alt-src="src/img/icond.png"  class="center masterTooltip" id="eyeGalaw-icon" title="What is eyeGalaw?">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
       <a class="ghost-button options center" href="#" id="options">Options▲</a>
       <div class="dropdown center low-opacity" id="effect" >
-        <span class="label"> Scrolling speed </span> <a id="speedhelp"class="help" href="#" title="Click to view" class="masterTooltip">?</a>
+        <span class="label masterTooltip" title="Lines per text scroll"> Scrolling speed </span> <a  class="help masterTooltip" href="#" title="Lines per text scroll" >?</a>
         <div class="flat-slider" id="flat-slider2"></div><span id="slider-value-scroll" class="slider-value"></span>
 
-        <span class="label"> Opacity </span>  <a class="help" href="#">?</a>
+        <span class="label masterTooltip" title="Transparancy/Opaqueness of controls" > Opacity </span>  <a class="help masterTooltip" title="Transparancy/Opaqueness of controls" href="#">?</a>
         <div class="flat-slider" id="flat-slider1"></div>      
         <span id="slider-value-opacity" class="slider-value"></span>
 
-        <span class="label"> Eye video feed <span class="label"><a class="help" href="#">?</a>
+        <span class="label masterTooltip" title="Enables/disable videofeed for face viewing" > Eye video feed </span><a class="help masterTooltip" href="#" title="Enables/disable videofeed for face viewing" >?</a>
         <div class="onoffswitch ">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
             <label class="onoffswitch-label" for="myonoffswitch">
@@ -47,7 +47,6 @@
                 <span class="onoffswitch-switch"></span>
             </label>
         </div>
-
 
       </div>
     </div>
