[eyeGalaw -documented] Added comments

--- a/popup.html
+++ b/popup.html
@@ -23,10 +23,9 @@
 
   <div id="main">
     <div id="inner-div">
+       <!-- pop up -->
+      <!--  -->
       <div class="" id="curve-div">
-      <!--  -->
-     
-      <!--  -->
         <img src="src/img/icon2.png" data-alt-src="src/img/icond.png"  class="center masterTooltip" id="eyeGalaw-icon" title="What is eyeGalaw?">
         <a class="center myButton " id="start_button" href="#" ></a>
       </div>
